compiler/tools/fpp-check/test/array/format_alias_float_not_int.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/array/format_alias_float_not_int.fpp:2.24
array A = [3] T format "{x}"
                       ^
error: invalid format string: T is not an integer type
